Add chinese version

--- a/chinese.html
+++ b/chinese.html
@@ -5,28 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif+SC&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Ooi Boon Pin Profile</title>
+    <title>黄文彬简历</title>
 </head>
 
-<body style="font-family: 'Roboto', sans-serif;">
+<body style="font-family: 'Noto Serif SC', serif;">
     <div class="container">
         <div class="header">
             <div class="picture">
                 <img id="face" src="media/passport_photo.JPG" alt="my face">
             </div>
             <div class="namecard">
-                <h1>Ooi Boon Pin</h1>
-                <h2>Software Developer</h2>
+                <h1>黄文彬</h1>
+                <h2>人工智能与机器学习</h2>
                 <p>
-                    Currently working on my PhD research in Mechatronic Engineering, major in Artificial Intelligence
-                    and Machine Learning. I love to code, like to explore different programming languages during my free
-                    time. Reading is my second nature, I read books related to science and universe, technology,
-                    self-improvement, and Facebook too ;-)
+                    出生于马来西亚槟城，毕业于马来西亚玻璃市大学电子机械自动化工程，本人对科技与教学有着非一般的执着与热
+                    忱。大一时期初步接触编程，从而对编程这一行业特别的喜爱。更透过网上课程自学网页和手机程序开发。
                 </p>
                 <p>
-                    For me, life is an endless learning journey, we learn to grow, and we grow to learn.
+                    以工程师的身份毕业后，为了让更多人了解到编程的乐趣，从而投入到了教育的行业。本人相信教学并不止于课程
+                    里的知识，而是要点燃孩子们心中对于知识的渴望和鼓励他们勇于面对不曾接触的领域。
+                </p>
+                <p>
+                    本人目前是马来西亚玻璃市大学电子机械自动化工程博士生，专注于人工智能与机器学习的研究。对于知识也是异
+                    常的渴望，书是外出的必备品，从天文到地理，从古迹到科学都是本人涉猎的范围。
                 </p>
             </div>
         </div>
@@ -34,23 +37,23 @@
         <div class="content">
             <div class="col1">
                 <div class="info">
-                    <h3>Personal Info:</h3>
-                    <h4>Address:</h4>
+                    <h3>个人资料</h3>
+                    <h4>住址:</h4>
                     <p>
                         Blok A-1-20, Taman Pantai Bersih, Bagan Ajam 13000 Butterworth, Pulau Pinang, Malaysia.
                     </p>
-                    <h4>Phone:</h4>
-                    <a href="tel:+60164044269">016-4044269</a>
-                    <h4>E-mail:</h4>
+                    <h4>联络号码:</h4>
+                    <a href="tel:+60164044269">+6016-4044269</a>
+                    <h4>电邮:</h4>
                     <a href="mailto:bpooi0702@gmail.com">bpooi0702@gmail.com</a>
-                    <h4>Website:</h4>
+                    <h4>网页:</h4>
                     <a href="https://github.com/OoiBP">https://github.com/OoiBP</a>
-                    <a href="https://ooibp.github.io/chinese.html">https://ooibp.github.io/</a>
+                    <a href="https://ooibp.github.io/chinese.html">https://ooibp.github.io/chinese.html</a>
                 </div>
                 <div class="skills">
-                    <h3>Skills:</h3>
+                    <h3>技能</h3>
                     <div class="skill-group">
-                        <div class="skill-item">Research Methodology</div>
+                        <div class="skill-item">研究方法</div>
                         <div class="skill-scale">
                             <div class="fill"></div>
                             <div class="fill"></div>
@@ -60,7 +63,7 @@
                         </div>
                     </div>
                     <div class="skill-group">
-                        <div class="skill-item">Teaching</div>
+                        <div class="skill-item">教学</div>
                         <div class="skill-scale">
                             <div class="fill"></div>
                             <div class="fill"></div>
@@ -130,7 +133,7 @@
                         </div>
                     </div>
                     <div class="skill-group">
-                        <div class="skill-item">Machine Learning</div>
+                        <div class="skill-item">机器学习</div>
                         <div class="skill-scale">
                             <div class="fill"></div>
                             <div class="fill"></div>
@@ -140,27 +143,7 @@
                         </div>
                     </div>
                     <div class="skill-group">
-                        <div class="skill-item">Raspberry Pi</div>
-                        <div class="skill-scale">
-                            <div class="fill"></div>
-                            <div class="fill"></div>
-                            <div class="fill"></div>
-                            <div class="nofill"></div>
-                            <div class="nofill"></div>
-                        </div>
-                    </div>
-                    <div class="skill-group">
-                        <div class="skill-item">C language</div>
-                        <div class="skill-scale">
-                            <div class="fill"></div>
-                            <div class="fill"></div>
-                            <div class="fill"></div>
-                            <div class="nofill"></div>
-                            <div class="nofill"></div>
-                        </div>
-                    </div>
-                    <div class="skill-group">
-                        <div class="skill-item">Go language</div>
+                        <div class="skill-item">树莓派</div>
                         <div class="skill-scale">
                             <div class="fill"></div>
                             <div class="fill"></div>
@@ -179,10 +162,39 @@
                             <div class="nofill"></div>
                         </div>
                     </div>
+                    <div class="skill-group">
+                        <div class="skill-item">C语言</div>
+                        <div class="skill-scale">
+                            <div class="fill"></div>
+                            <div class="fill"></div>
+                            <div class="fill"></div>
+                            <div class="nofill"></div>
+                            <div class="nofill"></div>
+                        </div>
+                    </div>
+                    <div class="skill-group">
+                        <div class="skill-item">Go语言</div>
+                        <div class="skill-scale">
+                            <div class="fill"></div>
+                            <div class="fill"></div>
+                            <div class="fill"></div>
+                            <div class="nofill"></div>
+                            <div class="nofill"></div>
+                        </div>
+                    </div>
+                    <div class="skill-group">
+                        <div class="skill-item">R语言</div>
+                        <div class="skill-scale">
+                            <div class="fill"></div>
+                            <div class="fill"></div>
+                            <div class="nofill"></div>
+                            <div class="nofill"></div>
+                            <div class="nofill"></div>
+                        </div>
+                    </div>
                 </div>
-
                 <div class="skills">
-                    <h3>Development Stack:</h3>
+                    <h3>开发栈</h3>
                     <div class="skill-group">
                         <div class="skill-item">ReactJS</div>
                         <div class="skill-scale">
@@ -278,118 +290,88 @@
 
             <div class="col2">
                 <div class="history">
-                    <h3>Work History:</h3>
+                    <h3>工作经验</h3>
                     <div class="work-group">
-                        <h4>Academic Instructor</h4>
-                        <p>Telebort Technologies, George Town, Penang</p>
+                        <h4>计算机科学培训员</h4>
+                        <p>马来西亚槟城科技宝技术有限公司, 乔治市, 槟城</p>
                         <p>2018/08 - 2019/11</p>
                         <ul>
-                            <li>
-                                Taught Scratch, MIT App Inventor, Arduino, Raspberry Pi, Micro:bit, Python, HTML, CSS
-                                and JavaScript coding languages according to age group and ability.
-                            </li>
-                            <li>
-                                Designed classes on JavaScript for primary and secondary students.
-                            </li>
-                            <li>
-                                Designed classes on Python for secondary students.
-                            </li>
-                            <li>
-                                Worked with Dell Malaysia to implement computer literacy program and technology use in
-                                office environment.
-                            </li>
+                            <li>提供6至14岁的儿童与青年课后编程教学</li>
+                            <li>负责Scratch, MIT App Inventor, HTML, CSS, JavaScript, Python, Raspberry Pi, Arduino,
+                                Micro:bit全英文授课，当前学生有146位</li>
+                            <li>根据市场与客户需求定制新课程，已完成JavaScript 24堂的课程，和Python 6小时训练营的课程</li>
+                            <li>定期更新教学资料以确保学生们的学习效率</li>
+                            <li>与Dell Malaysia合作提倡精明办公室活动，为36位Dell IT部职员提供Arduino和Micro:bit 4小时的课程</li>
+                            <li>与马来西亚理科大学 (USM) 合作提倡Girls in ICT活动，邀请各地30位女学生初步认识IT行业的乐趣</li>
+                            <li>与马来西亚数码经济机构 (MDEC) 合作举办My Digital Ninja Maker (数码忍者创客) 活动，帮助来自全国各地的86位尖子生完成一系列的创客挑战</li>
                         </ul>
                     </div>
                     <div class="work-group">
-                        <h4>Research Assistance</h4>
-                        <p>University Malaysia Perlis, Pauh, Perlis</p>
+                        <h4>研究助理</h4>
+                        <p>马来西亚玻璃市大学, 新路, 玻璃市</p>
                         <p>2017/04 - 2017/12</p>
                         <ul>
-                            <li>
-                                Assisted in research support of data processing operations for Sudden Cardiac Arrest
-                                prediction using Machine Learning techniques.
-                            </li>
-                            <li>
-                                Planned, modified and executed research techniques, procedures and tests.
-                            </li>
-                            <li>
-                                Prepared materials for reports, presentations and submission to peer-reviewed journal
-                                publications.
-                            </li>
-
+                            <li>使用机器学习算法，为心脏骤停预测做数据处理工作</li>
+                            <li>策划，更改，和执行研究项目并测试准确性和容忍性</li>
+                            <li>准备报告材料，论文发表所需资料</li>
                         </ul>
                     </div>
                     <div class="work-group">
-                        <h4>Industrial Trainee</h4>
-                        <p>Cytron Technologies, Bukit Minyak, Penang</p>
+                        <h4>研发部实习生</h4>
+                        <p>Cytron Technologies Sdn. Bhd., 武吉敏惹, 槟城</p>
                         <p>2015/06 - 2015/09</p>
                         <ul>
-                            <li>
-                                Conducted research and development with Arduino platform to exploit more project
-                                possibilities.
-                            </li>
-                            <li>
-                                Prepared learning materials and written tutorials for online project learning.
-                            </li>
-                            <li>
-                                Reviewed and updated all PCB components in record using Eagle software.
-                            </li>
-
+                            <li>研发更多以Arduino为主要微控制器的项目</li>
+                            <li>准备与撰写网上自学教程，已完成的教程有：Arduino 4x4x4 LED方块灯，4篇不一样模式的巡线机器人</li>
+                            <li>以Eagle软件检测与更新所有数据库里的PCD图纸</li>
                         </ul>
                     </div>
                     <div class="work-group">
-                        <h4>Machine Operator</h4>
-                        <p>Western Digital, Bayan Lepas, Penang</p>
+                        <h4>机械操作员</h4>
+                        <p>Western Digital Malaysia, 峇六拜, 槟城</p>
                         <p>2013/07 - 2013/08</p>
                         <ul>
                             <li>
-                                Set accurate feed rates and trimming protocols to maintain efficient production and meet
-                                schedule demands.
-                            </li>
-                            <li>
-                                Maximized productivity by keeping detailed production records and identifying hold-ups.
+                                设置精准的进给速度以维持机械最高效率的运作
                             </li>
                         </ul>
                     </div>
                     <div class="work-group">
-                        <h4>Teaching Assistance</h4>
-                        <p>KUMON Education Center, Butterworth, Penang</p>
+                        <h4>数学助教</h4>
+                        <p>公文式教育中心, 峇眼亚占, 槟城</p>
                         <p>2010/04 - 2012/08</p>
                         <ul>
-                            <li>
-                                Assisted teachers with supervision and care of group of 30 children.
-                            </li>
-                            <li>
-                                Reviewed students' progress using marking method, analysis of test scores and homework
-                                completion.
-                            </li>
+                            <li>帮助主教老师指导和照顾中心内的孩子</li>
+                            <li>主要工作是批改学生上交的数学课业和给予正确的指导</li>
+                            <li>制定下一堂的作业</li>
+                            <li>根据孩子的学习进度和态度，给与父母明确的答复</li>
                         </ul>
                     </div>
                 </div>
                 <div class="education">
-                    <h3>Education:</h3>
+                    <h3>教育</h3>
                     <div class="education-group">
-                        <h4>PhD in Artificial Intelligence and Machine Learning</h4>
-                        <p>University Malaysia Perlis</p>
-                        <p>2017/01 - current</p>
+                        <h4>Ph.D.: 电子机械自动化工程</h4>
+                        <p>马来西亚玻璃市大学 - 玻璃市</p>
+                        <p>2017/01 - 目前</p>
                     </div>
                     <div class="education-group">
-                        <h4>Bachelor in Mechatronic Engineering</h4>
-                        <p>University Malaysia Perlis</p>
+                        <h4>Bachelor of Engineering: 电子机械自动化工程</h4>
+                        <p>马来西亚玻璃市大学 - 玻璃市</p>
                         <p>2012/09 - 2016/10</p>
                     </div>
                 </div>
                 <div class="accomplishment">
-                    <h3>Accomplishment:</h3>
+                    <h3>成就</h3>
                     <ul>
-                        <li>Speaker of Penang School of AI: Impact on AI talk (2019)</li>
-                        <li>International Conference of Man-Machine Systems Best Presenter Award (2017)</li>
-                        <li>Technical adviser of University Malaysia Perlis Robotic Club (2017)</li>
-                        <li>Participated Penang Science Cluster Robot Sumo competition (2016)</li>
-                        <li>Assistant in The Great Lab (TGL) workshop (2015)</li>
-                        <li>Participated Survival Robot Competition (2014)</li>
-                        <li>Participated Arduino Trainer of Trainee (ToT) workshop (2013)</li>
-                        <li>Participated Combat Robot SEA competition (2013)</li>
+                        <li>曾担任槟城人工智能学校(Penang School of AI) Impact of AI研讨会的演讲嘉宾 (2019)</li>
+                        <li>曾获得国际人机系统研讨会最佳演说奖 (2017)</li>
+                        <li>曾担任马来西亚玻璃市大学机器人协会的技术指导 (2017)</li>
+                        <li>曾参与槟城科学圈所举办的相扑机器人大赛获得入围奖 (2016)</li>
+                        <li>曾担任马来西亚The Great Lab (TGL) 的活动助手，帮助参与者完成硬件编程项目 (2015)</li>
+                        <li>曾参与槟城国际科学展机器人生存大赛四强 (2014)</li>
+                        <li>曾参与Arduino Trainer of Trainee (培训员的培训员) 活动鼓励更多的人成为Arduino培训员 (2013)</li>
+                        <li>曾参与东南亚战斗机器人大赛获得银奖 (2013)</li>
                     </ul>
                 </div>
             </div>
