Update Skill Stack and Intro

--- a/chinese.html
+++ b/chinese.html
@@ -18,14 +18,10 @@
             </div>
             <div class="namecard">
                 <h1>黄文彬</h1>
-                <h2>人工智能与机器学习</h2>
+                <h2>软件开发</h2>
                 <p>
                     出生于马来西亚槟城，毕业于马来西亚玻璃市大学电子机械自动化工程，本人对科技与教学有着非一般的执着与热
                     忱。大一时期初步接触编程，从而对编程这一行业特别的喜爱。更透过网上课程自学网页和手机程序开发。
-                </p>
-                <p>
-                    以工程师的身份毕业后，为了让更多人了解到编程的乐趣，从而投入到了教育的行业。本人相信教学并不止于课程
-                    里的知识，而是要点燃孩子们心中对于知识的渴望和鼓励他们勇于面对不曾接触的领域。
                 </p>
                 <p>
                     本人目前是马来西亚玻璃市大学电子机械自动化工程博士生，专注于人工智能与机器学习的研究。对于知识也是异
@@ -195,6 +191,16 @@
                 </div>
                 <div class="skills">
                     <h3>开发栈</h3>
+                    <div class="skill-group">
+                        <div class="skill-item">VueJS</div>
+                        <div class="skill-scale">
+                            <div class="fill"></div>
+                            <div class="fill"></div>
+                            <div class="fill"></div>
+                            <div class="fill"></div>
+                            <div class="nofill"></div>
+                        </div>
+                    </div>
                     <div class="skill-group">
                         <div class="skill-item">ReactJS</div>
                         <div class="skill-scale">
