--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
             </div>
             <div class="namecard">
                 <h1>Ooi Boon Pin</h1>
-                <h2>Software Developer</h2>
+                <h2>Software Development</h2>
                 <p>
                     Currently working on my PhD research in Mechatronic Engineering, major in Artificial Intelligence
-                    and Machine Learning. I love to code, like to explore different programming languages during my free
-                    time. Reading is my second nature, I read books related to science and universe, technology,
+                    and Machine Learning. I fall in love with programming during my first year of degree study. I am
+                    eager in learning about web and mobile development.Reading is my second nature, I read books related
+                    to science and universe, technology,
                     self-improvement, and Facebook too ;-)
                 </p>
                 <p>
@@ -40,7 +41,7 @@
                         Blok A-1-20, Taman Pantai Bersih, Bagan Ajam 13000 Butterworth, Pulau Pinang, Malaysia.
                     </p>
                     <h4>Phone:</h4>
-                    <a href="tel:+60164044269">016-4044269</a>
+                    <a href="tel:+60164044269">+6016-4044269</a>
                     <h4>E-mail:</h4>
                     <a href="mailto:bpooi0702@gmail.com">bpooi0702@gmail.com</a>
                     <h4>Website:</h4>
@@ -150,6 +151,16 @@
                         </div>
                     </div>
                     <div class="skill-group">
+                        <div class="skill-item">Git & GitHub</div>
+                        <div class="skill-scale">
+                            <div class="fill"></div>
+                            <div class="fill"></div>
+                            <div class="fill"></div>
+                            <div class="nofill"></div>
+                            <div class="nofill"></div>
+                        </div>
+                    </div>
+                    <div class="skill-group">
                         <div class="skill-item">C language</div>
                         <div class="skill-scale">
                             <div class="fill"></div>
@@ -170,11 +181,11 @@
                         </div>
                     </div>
                     <div class="skill-group">
-                        <div class="skill-item">Git & GitHub</div>
+                        <div class="skill-item">R language</div>
                         <div class="skill-scale">
                             <div class="fill"></div>
                             <div class="fill"></div>
-                            <div class="fill"></div>
+                            <div class="nofill"></div>
                             <div class="nofill"></div>
                             <div class="nofill"></div>
                         </div>
@@ -183,6 +194,16 @@
 
                 <div class="skills">
                     <h3>Development Stack:</h3>
+                    <div class="skill-group">
+                        <div class="skill-item">VueJS</div>
+                        <div class="skill-scale">
+                            <div class="fill"></div>
+                            <div class="fill"></div>
+                            <div class="fill"></div>
+                            <div class="fill"></div>
+                            <div class="nofill"></div>
+                        </div>
+                    </div>
                     <div class="skill-group">
                         <div class="skill-item">ReactJS</div>
                         <div class="skill-scale">
