Add IOS developer

--- a/chinese.html
+++ b/chinese.html
@@ -159,6 +159,26 @@
                         </div>
                     </div>
                     <div class="skill-group">
+                        <div class="skill-item">IOS开发</div>
+                        <div class="skill-scale">
+                            <div class="fill"></div>
+                            <div class="fill"></div>
+                            <div class="fill"></div>
+                            <div class="nofill"></div>
+                            <div class="nofill"></div>
+                        </div>
+                    </div>
+                    <div class="skill-group">
+                        <div class="skill-item">Objective-C语言</div>
+                        <div class="skill-scale">
+                            <div class="fill"></div>
+                            <div class="fill"></div>
+                            <div class="fill"></div>
+                            <div class="nofill"></div>
+                            <div class="nofill"></div>
+                        </div>
+                    </div>
+                    <div class="skill-group">
                         <div class="skill-item">C语言</div>
                         <div class="skill-scale">
                             <div class="fill"></div>
@@ -297,6 +317,19 @@
             <div class="col2">
                 <div class="history">
                     <h3>工作经验</h3>
+                    <div class="work-group">
+                        <h4>IOS 开发员</h4>
+                        <p>Chris Business Solution, 峇眼亚占, 槟城</p>
+                        <p>2019/11 - 现今</p>
+                        <ul>
+                            <li>使用Xcode IDE, Objective-C, Swift 进行开发，维护和优化IOS程序软件</li>
+                            <li>设计和改善前端用户界面, 提高用户体验</li>
+                            <li>根据需求设计与开发后端整合系统</li>
+                            <li>负责技术文档编写工作</li>
+                            <li>编写组件功能测试和对缺陷进行修正</li>
+                            <li>协助客户安装产品和了解产品的使用方式</li>
+                        </ul>
+                    </div>
                     <div class="work-group">
                         <h4>计算机科学培训员</h4>
                         <p>马来西亚槟城科技宝技术有限公司, 乔治市, 槟城</p>
