--- a/index.html
+++ b/index.html
@@ -161,6 +161,26 @@
                         </div>
                     </div>
                     <div class="skill-group">
+                        <div class="skill-item">IOS Development</div>
+                        <div class="skill-scale">
+                            <div class="fill"></div>
+                            <div class="fill"></div>
+                            <div class="fill"></div>
+                            <div class="nofill"></div>
+                            <div class="nofill"></div>
+                        </div>
+                    </div>
+                    <div class="skill-group">
+                        <div class="skill-item">Objective-C language</div>
+                        <div class="skill-scale">
+                            <div class="fill"></div>
+                            <div class="fill"></div>
+                            <div class="fill"></div>
+                            <div class="nofill"></div>
+                            <div class="nofill"></div>
+                        </div>
+                    </div>
+                    <div class="skill-group">
                         <div class="skill-item">C language</div>
                         <div class="skill-scale">
                             <div class="fill"></div>
@@ -300,6 +320,22 @@
             <div class="col2">
                 <div class="history">
                     <h3>Work History:</h3>
+                    <div class="work-group">
+                        <h4>IOS Developer</h4>
+                        <p>Chris Business Solution, Butterworth, Penang</p>
+                        <p>2019/11 - current</p>
+                        <ul>
+                            <li>Develop, Maintain and Enhance IOS application with Xcode IDE, Objective-C, and Swift.</li>
+                            <li>Design and develop backend integration based on the requirements and specifications.</li>
+                            <li>Design and Enhance user interface (UI) for webpage or application interface.</li>
+                            <li>Conduct user requirement study, technical spec write up, Programming and user supports.</li>
+                            <li>Perform testing with end user.</li>
+                            <li>Writing stored procedures.</li>
+                            <li>Conduct basic Database Administration functions.</li>
+                            <li>Contribute in all phases of the development life cycle.</li>
+                            <li>Onsite installation & training.</li>
+                        </ul>
+                    </div>
                     <div class="work-group">
                         <h4>Academic Instructor</h4>
                         <p>Telebort Technologies, George Town, Penang</p>
