Update job position

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                 <div class="history">
                     <h3>Work History:</h3>
                     <div class="work-group">
-                        <h4>IOS Developer</h4>
+                        <h4>Software Developer</h4>
                         <p>Chris Business Solution, Butterworth, Penang</p>
                         <p>2019/11 - current</p>
                         <ul>
