--- a/index.html
+++ b/index.html
@@ -315,6 +315,60 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="skills">
+                    <h3>Languages:</h3>
+                    <div class="skill-group">
+                        <div class="skill-item">English</div>
+                        <div class="skill-scale">
+                            <div class="fill"></div>
+                            <div class="fill"></div>
+                            <div class="fill"></div>
+                            <div class="fill"></div>
+                            <div class="nofill"></div>
+                        </div>
+                    </div>
+                    <div class="skill-group">
+                        <div class="skill-item">Chinese</div>
+                        <div class="skill-scale">
+                            <div class="fill"></div>
+                            <div class="fill"></div>
+                            <div class="fill"></div>
+                            <div class="fill"></div>
+                            <div class="nofill"></div>
+                        </div>
+                    </div>
+                    <div class="skill-group">
+                        <div class="skill-item">Malay</div>
+                        <div class="skill-scale">
+                            <div class="fill"></div>
+                            <div class="fill"></div>
+                            <div class="fill"></div>
+                            <div class="nofill"></div>
+                            <div class="nofill"></div>
+                        </div>
+                    </div>
+                    <div class="skill-group">
+                        <div class="skill-item">Hokkien</div>
+                        <div class="skill-scale">
+                            <div class="fill"></div>
+                            <div class="fill"></div>
+                            <div class="fill"></div>
+                            <div class="nofill"></div>
+                            <div class="nofill"></div>
+                        </div>
+                    </div>
+                    <div class="skill-group">
+                        <div class="skill-item">Cantonese</div>
+                        <div class="skill-scale">
+                            <div class="fill"></div>
+                            <div class="fill"></div>
+                            <div class="nofill"></div>
+                            <div class="nofill"></div>
+                            <div class="nofill"></div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div class="col2">
@@ -322,7 +376,7 @@
                     <h3>Work History:</h3>
                     <div class="work-group">
                         <h4>Software Developer</h4>
-                        <p>Chris Business Solution, Butterworth, Penang</p>
+                        <p>Chris Business Solution, Butterworth, Penang, Malaysia</p>
                         <p>2019/11 - current</p>
                         <ul>
                             <li>Develop, Maintain and Enhance IOS application with Xcode IDE, Objective-C, and Swift.</li>
@@ -338,7 +392,7 @@
                     </div>
                     <div class="work-group">
                         <h4>Academic Instructor</h4>
-                        <p>Telebort Technologies, George Town, Penang</p>
+                        <p>Telebort Technologies, George Town, Penang, Malaysia</p>
                         <p>2018/08 - 2019/11</p>
                         <ul>
                             <li>
@@ -359,7 +413,7 @@
                     </div>
                     <div class="work-group">
                         <h4>Research Assistance</h4>
-                        <p>University Malaysia Perlis, Pauh, Perlis</p>
+                        <p>University Malaysia Perlis, Pauh, Perlis, Malaysia</p>
                         <p>2017/04 - 2017/12</p>
                         <ul>
                             <li>
@@ -378,7 +432,7 @@
                     </div>
                     <div class="work-group">
                         <h4>Industrial Trainee</h4>
-                        <p>Cytron Technologies, Bukit Minyak, Penang</p>
+                        <p>Cytron Technologies, Bukit Minyak, Penang, Malaysia</p>
                         <p>2015/06 - 2015/09</p>
                         <ul>
                             <li>
@@ -396,7 +450,7 @@
                     </div>
                     <div class="work-group">
                         <h4>Machine Operator</h4>
-                        <p>Western Digital, Bayan Lepas, Penang</p>
+                        <p>Western Digital, Bayan Lepas, Penang, Malaysia</p>
                         <p>2013/07 - 2013/08</p>
                         <ul>
                             <li>
@@ -410,7 +464,7 @@
                     </div>
                     <div class="work-group">
                         <h4>Teaching Assistance</h4>
-                        <p>KUMON Education Center, Butterworth, Penang</p>
+                        <p>KUMON Education Center, Butterworth, Penang, Malaysia</p>
                         <p>2010/04 - 2012/08</p>
                         <ul>
                             <li>
