--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
               <p>2020/09 - current</p>
               <ul>
                 <li>
-                  Develop monitoring system for industrial IOT application
+                  Develop monitoring system for industrial IOT application.
                 </li>
                 <li>
                   Design and develop backend integration based on the
