Change picture radius

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
       <div class="header">
         <div class="picture">
-          <img id="face" src="media/passport_photo.JPG" alt="my face" />
+          <img id="face" src="media/passport_photo.JPG" alt="my photo" />
         </div>
         <div class="namecard">
           <h1>Ooi Boon Pin</h1>
