--- a/index.html
+++ b/index.html
@@ -393,20 +393,26 @@
                   Develop monitoring system for industrial IOT application.
                 </li>
                 <li>
-                  Design and develop backend integration based on the
-                  requirements and specifications.
+                  Design scalable web application with microservices
+                  architecture.
                 </li>
                 <li>
-                  Design and enhance user interface (UI) for webpage or
+                  Layout MySQL database schema for optimized performance and
+                  reliability.
+                </li>
+                <li>
+                  Develop backend integration based on the client's requirements
+                  and specifications.
+                </li>
+                <li>
+                  Design and enhance user interface (UI) for webpage and
                   application interface.
                 </li>
                 <li>
-                  Conduct user requirement study, technical spec write up,
-                  Programming and user supports.
+                  Conduct user requirement study, technical spec write-up,
+                  programming and user supports.
                 </li>
-                <li>Perform testing with end user.</li>
-                <li>Conduct basic Database Administration functions.</li>
-                <li>Contribute in all phases of the development life cycle.</li>
+                <li>Contribute to all phases of the development life cycle.</li>
                 <li>Onsite installation & training.</li>
               </ul>
             </div>
@@ -423,9 +429,12 @@
                   Design and Enhance user interface (UI) for application
                   interface.
                 </li>
-                <li>Perform testing with end user.</li>
-                <li>Contribute in all phases of the development life cycle.</li>
-                <li>Onsite installation & training.</li>
+                <li>
+                  Conduct user requirement study, technical spec write-up,
+                  programming and user support.
+                </li>
+                <li>Conduct basic Database Administration functions.</li>
+                <li>Contribute to all phases of the development life cycle.</li>
               </ul>
             </div>
             <div class="work-group">
