Add printing style

--- a/index.html
+++ b/index.html
@@ -50,13 +50,11 @@
             <h4>E-mail:</h4>
             <a href="mailto:bpooi0702@gmail.com">bpooi0702@gmail.com</a>
             <h4>Website:</h4>
-            <a href="https://portfolio.wills-ooi.com/"
+            <a href="https://portfolio.wills-ooi.com"
               >https://portfolio.wills-ooi.com/</a
             >
             <a href="https://github.com/OoiBP">https://github.com/OoiBP</a>
-            <a href="https://ooibp.github.io/chinese.html"
-              >https://ooibp.github.io/</a
-            >
+            <a href="https://ooibp.github.io">https://ooibp.github.io/</a>
           </div>
           <div class="skills">
             <h3>Skills:</h3>
