--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
             <h3>Personal Info:</h3>
             <h4>Address:</h4>
             <p>
-              Blok A-1-20, Taman Pantai Bersih, Bagan Ajam 13000 Butterworth,
+              Blok A-1-20, <br />
+              Taman Pantai Bersih, <br />
+              Bagan Ajam 13000 Butterworth,<br />
               Pulau Pinang, Malaysia.
             </p>
             <h4>Phone:</h4>
@@ -51,10 +53,10 @@
             <a href="mailto:bpooi0702@gmail.com">bpooi0702@gmail.com</a>
             <h4>Website:</h4>
             <a href="https://portfolio.wills-ooi.com"
-              >https://portfolio.wills-ooi.com/</a
+              >https://portfolio.wills-ooi.com</a
             >
             <a href="https://github.com/OoiBP">https://github.com/OoiBP</a>
-            <a href="https://ooibp.github.io">https://ooibp.github.io/</a>
+            <a href="https://ooibp.github.io">https://ooibp.github.io</a>
           </div>
           <div class="skills">
             <h3>Skills:</h3>
